--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "Contos dos Vieses"
-
-email: your-email@example.com
+email: felipefernandesweb@gmail.com
 description: "Uma coletânea de fábulas encantadoras que ensinam sobre vieses cognitivos de forma leve e inspiradora."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://contosdosvieses.com.br" # the base hostname & protocol for your site, e.g. http://example.com
